--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,20 +15,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/imageView"
-        android:textSize="17dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp"
+        android:textSize="15sp"
+        android:layout_marginStart="5dp"
         android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/areas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/perimetros"
+        android:layout_toEndOf="@id/imageView"
+        android:textSize="15sp"
+
+        android:layout_marginStart="5dp" />
+
+    <TextView
+        android:id="@+id/perimetrosF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/areas"
         android:layout_toEndOf="@id/imageView"
-        android:textSize="18dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp" />
+        android:textSize="15sp"
+
+        android:layout_marginStart="5dp" />
+
+    <TextView
+        android:id="@+id/areasF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/perimetrosF"
+        android:layout_toEndOf="@id/imageView"
+        android:textSize="16sp"
+        android:layout_marginTop="22dp"
+        android:layout_marginStart="5dp" />
 </RelativeLayout>
